# SmartContracts

./: .env.example  .gitignore  .pre-commit-config.yaml  .semgrepignore  CODEX_MASTER_PROMPT_Arbitrum.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SKILL_Arbitrum.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  security.yml
docs/: ARBITRUM_PILOT.md  ARCHITECTURE.md  ETHICS_AND_SCOPE.md  LOCAL_SETUP.md  REPORTING_GUIDE.md  THREAT_MODEL_ARBITRUM.md  TOOLING_MATRIX.md
docs/research/: 2026-06-30-arbitrum-bridge-triage.md
pocs/arbitrum/bold-staking-pool-loss-shift/: README.md  (+1 more)
semgrep/solidity/: arbitrum-cross-chain.yml  bridge-accounting.yml  upgradeability.yml
src/scbounty/: __init__.py  __main__.py  cli.py
targets/arbitrum/: README.md  arbitrum.yaml  notes.md  scope_snapshot.json  scope_snapshot.md
targets/toy_bridge/: README.md  scope_snapshot.json  toy_bridge.yaml  triage_note_example.md
templates/echidna/: echidna.yaml.j2
templates/foundry/: fork_poc_test.t.sol.j2  invariant_test.t.sol.j2
templates/medusa/: medusa.json.j2
templates/reports/: immunefi_report.md.j2  triage_note.md.j2
tests/integration/: test_live_scope.py
tests/unit/: test_analyzer_evidence.py  test_analyzers.py  test_cli.py  test_command.py  test_config_loader.py  test_detectors.py  test_finding_model.py  test_harness_and_metadata.py  test_logging.py  test_more_detectors.py  test_reporting.py  test_reporting_service.py  test_runner.py  test_scope_coverage.py  test_scope_gate.py  test_scope_gate_http.py  test_semgrep_rules.py  test_source_fetcher.py
(+69 files in other folders)
