[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "scbounty"
version = "0.1.0"
description = "Local-first smart-contract bounty research workbench with an Arbitrum pilot."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "SmartContracts maintainers" }]
dependencies = [
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "orjson>=3.10,<4",
  "pydantic>=2.8,<3",
  "PyYAML>=6,<7",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "respx>=0.21,<1",
  "ruff>=0.6,<1",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
scbounty = "scbounty.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/scbounty"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
cache_dir = ".scbounty/cache/pytest"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: requires optional external tools or network access",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/scbounty/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["scbounty"]
exclude = ["tests/fixtures"]

[tool.coverage.run]
branch = true
source = ["scbounty"]

[tool.coverage.report]
fail_under = 80
show_missing = true
